# Layout21

./: .gitignore  .gitlab-ci.yml  Cargo.toml  deny.toml  readme.md
.github/workflows/: audit-nightly.yaml  audit.yaml  deny.yaml  test.yml
Tetris/: readme.md  setup.py
Tetris/tests/: demos.rs  empty.yaml  insts.yaml  test_placer.py  test_ro.py  test_tetris.py  test_tetris1.py
Tetris/tetris/: __init__.py  abs.rs  abstract.py  align.py  array.py  bbox.py  bundle.py  cell.py  cell.rs  coords.py  error.py  group.py  index.py  instance.py  instantiable.py  interface.rs  layer_period.py  layout.py  lib.rs  library.py  library.rs  net_handle.py  outline.py  outline.rs  placement.py  placer.py  reflect.py  relz.py  separation.py  side.py  stack.py  track_spec.py  tracks.py  units.py  validate.rs
Tetris/tetris/conv/: layer_period.py  mod.rs  proto.rs  tracks.py
Tetris/tetris/tests/: stacks.rs
gds21/: .gitlab-ci.yml  Cargo.toml  readme.md  readme.tpl
gds21/resources/: empty.gds.json  gds21.schema.json  sample1.gds  sample1.json  sample1.records.json  sample1.yaml  sample1_array.json  sample1_inst.json
gds21/src/: data.rs  lib.rs  main.rs  read.rs  tests.rs  write.rs
gds2proto/: Cargo.toml
gds2proto/resources/: sky130_fd_sc_hd__dfxtp_1.pb  sky130_fd_sc_hd__dfxtp_1.pb.yaml
gds2proto/src/: main.rs  proto2gds.rs
gds2proto/tests/: tests.rs
layout21/: .gitignore  Cargo.toml
layout21/examples/: gds2proto.rs
layout21/src/: abstrakt.rs  cell.rs  coords.rs  interface.rs  lib.rs  outline.rs  raw.rs  rawconv.rs  stack.rs  tests.rs  validate.rs
layout21converters/: Cargo.toml
layout21converters/resources/: gds2proto_test_output.pb  macro.lef  macro.yaml  proto2gds_test_output.gds  sky130.technology.pb  sky130.technology.pb.txt  sky130_fd_sc_hd__dfxtp_1.gds  sky130_fd_sc_hd__dfxtp_1.golden.gds.json  sky130_fd_sc_hd__dfxtp_1.golden.gds.yaml  sky130_fd_sc_hd__dfxtp_1.golden.yaml  sky130_fd_sc_hd__dfxtp_1.json  sky130_fd_sc_hd__dfxtp_1.pb.yaml  sky130_fd_sc_hd__dfxtp_1.roundtrip.gds
layout21converters/src/: gds2proto.rs  gds2ser.rs  gds_serialization.rs  lib.rs  proto2gds.rs  proto2lef.rs
layout21macros/: Cargo.toml
layout21macros/src/: lib.rs
layout21meta/: Cargo.toml
layout21meta/src/: lib.rs
layout21protos/: Cargo.toml  README.md  build.rs
layout21protos/proto/: abstrakt.proto  circuit.proto  raw.proto  tetris.proto  utils.proto  views.proto
layout21protos/protos/: abstrakt.proto  raw.proto  utils.proto
layout21protos/src/: circuit.rs  conv.rs  lib.rs  raw.rs  tetris.rs  utils.rs  views.rs
layout21raw/: Cargo.toml
layout21raw/resources/: dff1_lib.golden.vlsir.yaml
layout21raw/src/: align.rs  bbox.rs  data.rs  error.rs  gds.rs  geom.rs  lef.rs  lib.rs  proto.rs  tests.rs  translate.rs
layout21tetris/: Cargo.toml
layout21tetris/resources/: ginv.gds  ginv.gds.yaml
layout21tetris/src/: abs.rs  abstrakt.rs  array.rs  bbox.rs  cell.rs  coords.rs  group.rs  instance.rs  layout.rs  lib.rs  library.rs  outline.rs  placement.rs  placer.rs  rawconv.rs  stack.rs  tests.rs  tracks.rs  validate.rs
layout21tetris/src/conv/: mod.rs  proto.rs  raw.rs
layout21tetris/src/tests/: mod.rs  ro.rs  stacks.rs
layout21utils/: Cargo.toml  readme.md
layout21utils/src/: context.rs  dep_order.rs  enumstr.rs  error.rs  lib.rs  ptr.rs  ser.rs
layout21wgpu/: Cargo.toml
layout21wgpu/src/: buffers.rs  color.rs  gpu.rs  layout.rs  lib.rs  main.rs  run.rs  shader.wgsl  vertex.rs
lef21/: Cargo.toml  readme.md  readme.tpl
lef21/resources/: geoms1.yaml  lef21.schema.json  lib1.yaml  lib2.yaml
lef21/src/: data.rs  lib.rs  read.rs  tests.rs  write.rs
lef2yaml/: Cargo.toml
lef2yaml/src/: main.rs
rules21/: Cargo.toml  readme.tpl
rules21/src/: data.rs  lib.rs
scripts/: install-dev.sh
