[package]
name = "gds21"
version = "0.1.1"
description = "Gds21 Integrated Circuit Layout Parser & Writer"
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
authors = ["Dan Fritchman <dan@fritch.mn>"]

[dependencies]
byteorder = "1.3.4"
chrono = {version = "0.4", features = ["serde"]}
derive_builder = "0.9.0"
enum_dispatch = "0.3.1"
memmap = "0.7.0"
num-derive = "0.3"
num-traits = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = {version = "3", optional = true}
toml = "0.5.7"

[dev-dependencies]
tempfile = {version = "3"}

[features]
selftest = ["tempfile"]
