[package]
description = "Gds21 Integrated Circuit Layout Parser & Writer"
name = "gds21"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.2.1"
workspace = "../"
exclude = ["resources",]

[dependencies]
# Local workspace dependencies
layout21utils = {path = "../layout21utils", version="0.2.1"}
# External dependencies
byteorder = "1.3.4"
chrono = { version = "0.4.19", features = ["serde"] }
derive_builder = "0.9.0"
derive_more = "0.99.16"
num-derive = "0.3"
num-traits = "0.2.15"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.88"
serde_json = "1.0"
tempfile = {version = "3", optional = true}

[dev-dependencies]
tempfile = {version = "3"}

[features]
selftest = ["tempfile"]
