[package]
description = "Gds21 Integrated Circuit Layout Parser & Writer"
name = "gds21"

# Shared layout21 attributes
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
workspace = "../"

[dependencies]
# Local workspace dependencies
layout21utils = {path = "../layout21utils", version = "3.0.0-pre.2"}

# External dependencies
byteorder = "1.3.4"
chrono = {version = "0.4.20", features = ["serde"]}
derive_builder = "0.9.0"
derive_more = "0.99.16"
num-derive = "0.3"
num-traits = "0.2"
schemars = {version = "0.8.10"}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
serde_json = "1.0"
tempfile = {version = "3", optional = true}

[dev-dependencies]
tempfile = {version = "3"}

[features]
selftest = ["tempfile"]
