[package]
description = "Layout21 Integrated Circuit Layout. Meta-crate, re-exporting several internally defined crates"
name = "layout21"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.2.1"
workspace = "../"

[dependencies]
gds21 = {path = "../gds21", version = "0.2.1", features = ["selftest"]}
layout21protos = {path = "../layout21protos", version = "0.2.1"}
layout21raw = {path = "../layout21raw", version = "0.2.1"}
layout21tetris = {path = "../layout21tetris", version = "0.2.1"}
layout21utils = {path = "../layout21utils", version = "0.2.1"}
lef21 = {path = "../lef21", version = "0.2.1"}
