[package]
description = "Layout21 Integrated Circuit Layout"
name = "layout21"

# Shared layout21 attributes
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
workspace = "../"

[dependencies]
gds21 = {path = "../gds21", version = "3.0.0-pre.2", features = ["selftest"]}
layout21converters = {path = "../layout21converters", version = "3.0.0-pre.2"}
layout21protos = {path = "../layout21protos", version = "3.0.0-pre.2"}
layout21raw = {path = "../layout21raw", version = "3.0.0-pre.2"}
layout21utils = {path = "../layout21utils", version = "3.0.0-pre.2"}
lef21 = {path = "../lef21", version = "3.0.0-pre.2"}
## FIXME! layout21tetris = {path = "../layout21tetris", version = "3.0.0-pre.2"}
