[package]
description = "Converters to/from Layout21 formats from/to various legacy formats."
name = "layout21converters"

# Shared layout21 attributes
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
workspace = "../"

[dependencies]
chrono = {version = "0.4.20"}
clap = {version = "3.0.0-beta.5", features = ["derive"]}
gds21 = {path = "../gds21"}
layout21protos = {path = "../layout21protos"}
layout21raw = {path = "../layout21raw"}
layout21utils = {path = "../layout21utils"}
lef21 = {path = "../lef21"}
