[package]
authors = ["Dan Fritchman <dan@fritch.mn>"]
description = "Layout21 meta-crate"
edition = "2018"
name = "layout21meta"
version = "0.1.0"
workspace = "../"

[dependencies]
gds21 = {path = "../gds21", features = ["selftest"]}
layout21protos = {path = "../layout21protos"}
layout21raw = {path = "../layout21raw"}
lef21 = {path = "../lef21"}
