[package]
name = "layout21protos"
description = "Layout21 ProtoBuf Definitions"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.2.1"
workspace = "../"

[dependencies]
vlsir = { path = "/home/aryap/src/vlsir/bindings/rust", version = "2.0.1" }
