[package]
name = "layout21raw"
description = "Layout21 Raw-Format Integrated Circuit Layout"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.2.0"
workspace = "../"

[dependencies]
# Local workspace dependencies
gds21 = {path = "../gds21", optional = true}
layout21protos = {path = "../layout21protos", optional = true}
layout21utils = {path = "../layout21utils"}
lef21 = {path = "../lef21", optional = true}
# Crates.io 
enum_dispatch = "0.3.7"
num-integer = "0.1"
num-traits = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
slotmap = {version = "1.0", features = ["serde"]}

[features]
# Break out each import/export format as a feature 
# All are enabled by default 
default = ["gds", "lef", "proto"]
gds = ["gds21"]
lef = ["lef21"]
proto = ["layout21protos"]
