[package]
name = "layout21raw"
description = "Layout21 Raw-Format Integrated Circuit Layout"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.2.1"
workspace = "../"
exclude = ["resources",]

[dependencies]
# Local workspace dependencies
gds21 = {path = "../gds21", version = "0.2.1", optional = true}
layout21protos = {path = "../layout21protos", version = "0.2.1", optional = true}
layout21utils = {path = "../layout21utils", version = "0.2.1"}
lef21 = {path = "../lef21", version = "0.2.1", optional = true}
# Crates.io 
enum_dispatch = "0.3.7"
num-integer = "0.1"
num-traits = "0.2.15"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0"
slotmap = {version = "1.0", features = ["serde"]}
derive_builder = "0.11"
anyhow = "1"

[features]
# Break out each import/export format as a feature 
# All are enabled by default 
default = ["gds", "lef", "proto"]
gds = ["gds21"]
lef = ["lef21"]
proto = ["layout21protos"]
