[package]
description = "Layout21 Raw-Format Integrated Circuit Layout"
name = "layout21raw"

# Shared layout21 attributes
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
workspace = "../"

[dependencies]
# Local workspace dependencies
gds21 = {path = "../gds21", version = "3.0.0-pre.2", optional = true}
layout21protos = {path = "../layout21protos", version = "3.0.0-pre.2", optional = true}
layout21utils = {path = "../layout21utils", version = "3.0.0-pre.2"}
lef21 = {path = "../lef21", version = "3.0.0-pre.2", optional = true}
# Crates.io 
enum_dispatch = "0.3.7"
num-integer = "0.1"
num-traits = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
slotmap = {version = "1.0", features = ["serde"]}

[features]
# Break out each import/export format as a feature 
# All are enabled by default 
default = ["gds", "lef", "proto"]
gds = ["gds21"]
lef = ["lef21"]
proto = ["layout21protos"]
