[package]
name = "layout21tetris"
description = "Layout21 Gridded 'Tetris' Integrated Circuit Layout"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.2.0"
workspace = "../"

[dependencies]
# Local workspace dependencies
layout21raw = {path = "../layout21raw"}
layout21utils = {path = "../layout21utils"}
# Crates.io 
derive_more = "0.99.16"
enum_dispatch = "0.3.1"
num-integer = "0.1"
num-traits = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
slotmap = {version = "1.0", features = ["serde"]}
