[package]
description = "Layout21 Gridded 'Tetris' Integrated Circuit Layout"
name = "layout21tetris"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.2.1"
workspace = "../"
exclude = ["resources",]

[dependencies]
# Local workspace dependencies
layout21raw = {path = "../layout21raw", version = "0.2.1"}
layout21utils = {path = "../layout21utils", version = "0.2.1"}
layout21protos = {path = "../layout21protos", version = "0.2.1"}

# Crates.io 
derive_builder = "0.9"
derive_more = "0.99.16"
num-integer = "0.1"
num-traits = "0.2.15"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.88"
slotmap = {version = "1.0", features = ["serde"]}
