[package]
description = "Layout21 Gridded 'Tetris' Integrated Circuit Layout"
name = "layout21tetris"

# Shared layout21 attributes
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
workspace = "../"

[dependencies]
# Local workspace dependencies
layout21protos = {path = "../layout21protos", version = "3.0.0-pre.3"}
layout21raw = {path = "../layout21raw", version = "3.0.0-pre.3"}
layout21utils = {path = "../layout21utils", version = "3.0.0-pre.3"}

# Crates.io 
derive_builder = "0.9"
derive_more = "0.99.16"
num-integer = "0.1"
num-traits = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
slotmap = {version = "1.0", features = ["serde"]}
