[package]
authors = ["Dan Fritchman <dan@fritch.mn>"]
description = "Layout21 Internal Utility Crate"
edition = "2018"
license = "BSD-3-Clause"
name = "layout21utils"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.1.0"
workspace = "../"

[dependencies]
by_address = "1.0.4"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5.7"
