[package]
description = "Layout21 Internal Utility Crate"
name = "layout21utils"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "0.2.1"
workspace = "../"

[dependencies]
by_address = "1.0.4"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.88"
serde_json = "1.0"
serde_yaml = "0.8"
textwrap = "0.14.2"
toml = "0.5.7"
