[package]
description = "Library Exchange Format (LEF) Integrated Circuit Layout Parser & Writer"
name = "lef21"
# Shared layout21 attributes
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Layout21"
version = "3.0.0-pre.2"
workspace = "../"
exclude = ["resources",]

[dependencies]
# Local workspace dependencies
layout21utils = {path = "../layout21utils", version="3.0.0-pre.2"}

# External dependencies
derive_builder = "0.9.0"
enum_dispatch = "0.3.1"
num-derive = "0.3"
num-traits = "0.2"
rust_decimal = {version = "1.24.0", features = ["serde-str"]}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
serde_json = "1.0"
derive_more = "0.99.16"
once_cell = "1.8.0"
fstrings = "0.2.3"
schemars = {version = "0.8.10", features = ["rust_decimal"] }
