[package]
description = "Library Exchange Format (LEF) Integrated Circuit Layout Parser & Writer"
name = "lef21"

# Shared layout21 attributes
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
workspace = "../"

[dependencies]
# Local workspace dependencies
layout21utils = {path = "../layout21utils", version = "3.0.0-pre.3"}

# External dependencies
derive_builder = "0.9.0"
derive_more = "0.99.16"
enum_dispatch = "0.3.1"
fstrings = "0.2.3"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.8.0"
rust_decimal = {version = "1.24.0", features = ["serde-str"]}
schemars = {version = "0.8.10", features = ["rust_decimal"]}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.88"
serde_json = "1.0"
